Adding missing files

--- a/correctarium_js/package.json
+++ b/correctarium_js/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "geoloc",
+  "name": "correctarium_js",
   "version": "1.0.0",
   "description": "",
-  "main": "geoloc.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "ip": "^1.1.5"
+    "moment-business-time": "^2.0.0"
   }
 }
